kustomize/main/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: yoyoyellow/cloud:1.1
        imagePullPolicy: Always  
        ports:
        - containerPort: 8000
          #volumeMounts:
          #- name: django-data
          # mountPath: /app/data  # Django 애플리케이션의 데이터 저장 경로
