kustomize/main/traefik-deployment.yaml
# traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-ingress-controller
  namespace: traefik
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
      - name: traefik
        image: traefik:v2.4
        args:
        - "--api.insecure=true"
        - "--accesslog"
        - "--entrypoints.web.address=:80"
        - "--providers.kubernetescrd"
        ports:
        - name: web
          containerPort: 80
        - name: admin
          containerPort: 8080
