kustomize/main/app-namespace-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-app
  namespace: app
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`cloud1.providehighvalue.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: frontend
      port: 80
