kustomize/main/frontend-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-frontend
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`cloud1.providehighvalue.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: frontend
      port: 80
