kustomize/main/game-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-game
  namespace: game
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`cloud1.providehighvalue.com`) && PathPrefix(`/game1`)
    kind: Rule
    services:
    - name: deployment-2048
      port: 10000
  - match: Host(`cloud1.providehighvalue.com`) && PathPrefix(`/game2`)
    kind: Rule
    services:
    - name: mario
      port: 77
