kustomize/main/ingress-Route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  tls:
    secretName: providehighvalue-tls
  routes:
  - match: Host(`cloud1.providehighvalue.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: frontend
      namespace: app
      port: 80
  - match: Host(`cloud1.providehighvalue.com`) && PathPrefix(`/game1`)
    kind: Rule
    services:
    - name: deployment-2048
      namespace: game
      port: 80
  - match: Host(`cloud1.providehighvalue.com`) && PathPrefix(`/game2`)
    kind: Rule
    services:
    - name: mario
      namespace: game
      port: 77
